# videosearch

./: .dockerignore  .gitignore  Dockerfile  README.md  api.py  docker-compose.yml  pyproject.toml  videosearch_api.spec
.github/workflows/: release.yml
docs/: ROADMAP.md
docs/superpowers/plans/: 2026-04-16-onnx-migration.md
docs/superpowers/specs/: 2026-04-16-desktop-app-design.md  2026-04-16-onnx-migration-design.md
scripts/: build-sidecar.sh  export_onnx.py
tests/: test_cli.py  test_duplicates.py  test_extractor.py  test_indexer.py  test_searcher.py  test_tokenizer.py
ui/: .gitignore  index.html  package-lock.json  package.json
ui/src/: App.tsx  index.css
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/src/: lib.rs
ui/src/components/: DropZone.tsx  DuplicatesList.tsx  DuplicatesView.tsx  Icons.tsx  LibraryView.tsx  Onboarding.tsx  PlayerView.tsx  ResultCard.tsx  ResultsList.tsx  SearchBar.tsx  SearchView.tsx  Sidebar.tsx  StatusBar.tsx  Thumb.tsx  Titlebar.tsx  Toast.tsx  Topbar.tsx  TweaksPanel.tsx  VideoPlayer.tsx
ui/src/hooks/: useDuplicates.ts  useFiles.ts  useLibrary.ts  usePlayer.ts  useSearch.ts
ui/src/lib/: api.ts
videosearch/: cli.py  clip_tokenizer.py  duplicates.py  extractor.py  indexer.py  searcher.py
